--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<p> this is new repo.</p>
-<big> nothing is impossible</big>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+     <link rel="stylesheet" href="style.css">  
+</head>
+<body>
+    <center><img src="https://media.giphy.com/media/GkQJID4P3ZcCQ/giphy.gif"></center>
+    
+</body>
+</html>
+
