--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="style.css">  
 </head>
 <body>
-    <center><img src="https://media.giphy.com/media/GkQJID4P3ZcCQ/giphy.gif"></center>
+    <center><img src="https://media.giphy.com/media/GkQJID4P3ZcCQ/giphy.gif">(button)</center>
     
 </body>
 </html>
