--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
      <link rel="stylesheet" href="style.css">  
 </head>
 <body>
-    <center><img src="https://media.giphy.com/media/GkQJID4P3ZcCQ/giphy.gif"> (dropdown)</center>
-    <center><img src="https://media.giphy.com/media/GkQJID4P3ZcCQ/giphy.gif">(button)</center>
-    
+    <center><img src="https://media.giphy.com/media/GkQJID4P3ZcCQ/giphy.gif"></center>
+   <div id="box"></div>
 </body>
 </html>
 
